--- a/pom.xml
+++ b/pom.xml
@@ -87,14 +87,15 @@
         <google.protobuf.version>2.6.1</google.protobuf.version>
         <failIfNoTests>false</failIfNoTests>
         <hadoop.version>1.0.4</hadoop.version>
-        <camel.version>2.18.2</camel.version>
+        <camel.version>2.16.3</camel.version>
         <zookeeper.version>3.4.6</zookeeper.version>
         <kafka.version>0.8.2.2</kafka.version>
         <spark.version>1.5.2</spark.version>
         <agrona.version>0.5.4</agrona.version>
         <mapdb.version>3.0.2</mapdb.version>
         <sqlite.version>3.15.1</sqlite.version>
-        <playframework.version>2.4.6</playframework.version>    <!-- Play Framework 2.5 dropped Scala 2.10 support - use 2.4 for Spark compatibility w/ Scala 2.10 -->
+        <playframework.version>2.4.6
+        </playframework.version>    <!-- Play Framework 2.5 dropped Scala 2.10 support - use 2.4 for Spark compatibility w/ Scala 2.10 -->
         <reflections.version>0.9.10</reflections.version>
         <javax.ws.rs.version>2.0</javax.ws.rs.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
@@ -104,6 +105,7 @@
         <maven-build-helper-plugin.version>1.12</maven-build-helper-plugin.version>
         <maven-play2-plugin.version>1.0.0-beta5</maven-play2-plugin.version>
         <maven-surefire.version>2.19.1</maven-surefire.version>
+        <dl4j-test-resources.version>0.7.3-SNAPSHOT</dl4j-test-resources.version>
     </properties>
 
     <profiles>
@@ -116,7 +118,7 @@
                 <dependency>
                     <groupId>org.deeplearning4j</groupId>
                     <artifactId>dl4j-test-resources</artifactId>
-                    <version>${project.version}</version>
+                    <version>${dl4j-test-resources.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -133,7 +135,7 @@
                 <dependency>
                     <groupId>org.deeplearning4j</groupId>
                     <artifactId>dl4j-test-resources</artifactId>
-                    <version>${project.version}</version>
+                    <version>${dl4j-test-resources.version}</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
@@ -155,7 +157,7 @@
                 <dependency>
                     <groupId>org.deeplearning4j</groupId>
                     <artifactId>dl4j-test-resources</artifactId>
-                    <version>${project.version}</version>
+                    <version>${dl4j-test-resources.version}</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
