--- a/deeplearning4j-scaleout/spark/dl4j-spark/pom.xml
+++ b/deeplearning4j-scaleout/spark/dl4j-spark/pom.xml
@@ -20,12 +20,10 @@
     <parent>
         <artifactId>spark_2.11</artifactId>
         <groupId>org.deeplearning4j</groupId>
-        <version>0.7.3-SNAPSHOT</version>
+        <version>0.7.3_spark_1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>dl4j-spark_2.11</artifactId>
-    <version>0.7.3_spark_${spark.major.version}-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>dl4j-spark</name>
@@ -81,7 +79,7 @@
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-ui-components</artifactId>
-            <version>${parent.version}</version>
+            <version>${deeplearning4j.version}</version>
         </dependency>
 
         <!-- Test Dependencies -->
@@ -100,7 +98,7 @@
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-play_2.11</artifactId>
-            <version>${parent.version}</version>
+            <version>${deeplearning4j.version}</version>
             <scope>test</scope>
         </dependency>
 
