--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <javacpp.version>1.3.2-SNAPSHOT</javacpp.version>
         <javacpp-presets.version>1.3</javacpp-presets.version>
         <nd4j.version>0.7.3-SNAPSHOT</nd4j.version>
+        <deeplearning4j.version>0.7.3-SNAPSHOT</deeplearning4j.version>
         <datavec.version>0.7.3-SNAPSHOT</datavec.version>
         <datavec.spark.version>0.7.3_spark_1-SNAPSHOT</datavec.spark.version>
         <commonsmath.version>3.4.1</commonsmath.version>
@@ -268,7 +269,7 @@
         <module>deeplearning4j-scaleout</module>
         <module>deeplearning4j-ui-parent</module>
         <module>deeplearning4j-graph</module>
-        <module>deeplearning4j-cuda</module>
+        <!--module>deeplearning4j-cuda</module-->
         <module>deeplearning4j-nlp-parent</module>
         <module>deeplearning4j-nn</module>
         <module>deeplearning4j-modelimport</module>
